--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,10 @@ http{
         listen  80;
         server_name 185.119.59.127 test-crmleads.ru www.test-crmleads.ru;
 
+        location / {
+            proxy_pass test-crmleads.ru/;
+        }
+
         location /api/ {
             proxy_pass http://localhost:5000/;
         }
