--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,13 @@ events{
 
 http{
     server{
-        listen  80;
-        server_name 185.119.59.127 test-crmleads.ru www.test-crmleads.ru;
+        listen 80;
+        listen [::]:80;
 
-        location / {
-            proxy_pass test-crmleads.ru/;
-        }
+        root /var/www/your_domain/html;
+        index index.html index.htm index.nginx-debian.html;
+
+        server_name test-crmleads.ru www.test-crmleads.ru;
 
         location /api/ {
             proxy_pass http://localhost:5000/;
