--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http{
         listen 80;
         listen [::]:80;
 
-        root /var/www/your_domain/html;
+        root /var/www/html;
         index index.html index.htm index.nginx-debian.html;
 
         server_name test-crmleads.ru www.test-crmleads.ru;
