--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_URL=mongodb://gen_user:OIfY%2B1dnW8x%5Cc%3E@94.228.125.213:27017/default_db?a
 JWT_ACCESS_SECRET=jwt-123
 JWT_REFRESH_SECRET=jwt-refresh-123
 API_URL=http://test-crmleads.ru:5000
-CLIENT_URL=http://test-crmleads.ru
+CLIENT_URL=http://test-crmleads.ru:80
