--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,10 @@ http{
 
         server_name test-crmleads.ru www.test-crmleads.ru;
 
+        location / {
+            proxy_pass http://localhost/;
+        }
+        
         location /api/ {
             proxy_pass http://localhost:5000/;
         }
