--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http{
         server_name test-crmleads.ru www.test-crmleads.ru;
 
         location / {
-            proxy_pass http://localhost/;
+            proxy_pass http://localhost:3000;
         }
         
         location /api/ {
