--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,10 @@ http{
         index index.html index.htm index.nginx-debian.html;
 
         server_name test-crmleads.ru www.test-crmleads.ru;
+
+         location /static/ {
+            root /var/www/html/static;
+        }
         
         location /api/ {
             proxy_pass http://localhost:5000/;
