--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http{
         server_name test-crmleads.ru www.test-crmleads.ru;
 
          location /static/ {
-            root /var/www/html/static;
+            root /var/www/html/static/;
         }
         
         location /api/ {
