--- a/nginx.conf
+++ b/nginx.conf
@@ -12,8 +12,8 @@ http{
 
         server_name test-crmleads.ru www.test-crmleads.ru;
 
-         location /static/ {
-            root /var/www/html/static/;
+        location / {
+            proxy_pass http://localhost:3000/;
         }
         
         location /api/ {
