--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
 events{
+
 }
 
 http{
@@ -6,15 +7,11 @@ http{
         listen 80;
         listen [::]:80;
 
-        root /var/www/html/;
+        root /var/www/html;
         index index.html index.htm index.nginx-debian.html;
 
         server_name test-crmleads.ru www.test-crmleads.ru;
 
-        location / {
-            proxy_pass http://localhost:3000/;
-        }
-        
         location /api/ {
             proxy_pass http://localhost:5000/;
         }
