--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT=5000
 DB_URL=mongodb://gen_user:OIfY%2B1dnW8x%5Cc%3E@94.228.125.213:27017/default_db?authSource=admin&directConnection=true
 JWT_ACCESS_SECRET=jwt-123
 JWT_REFRESH_SECRET=jwt-refresh-123
-API_URL=https://test-crmleads.ru
+API_URL=http://test-crmleads.ru:5000
 CLIENT_URL=https://test-crmleads.ru
